Changed mobile view footer links to grey to better align with the desktop view and to make them less prominent (so aren't more prominent than the language links on the splash pages). Removed red link hover colour. Fixed supression of rounded corners in mobile view menu.

--- a/src/theme-gcwu-fegc/sass/includes/default-mobile.scss
+++ b/src/theme-gcwu-fegc/sass/includes/default-mobile.scss
@@ -147,9 +147,14 @@ a {
 #gcwu-sft{
 	padding-bottom:5px;
 	margin-top:5px;
-	li a.ui-btn {
-		color:#fff !important;
-		font-weight:700;
+	li {
+		a.ui-btn {
+			font-weight:700;
+			margin-top:-1px;
+		}
+		a.ui-btn-active{
+			color:#fff;
+		}
 	}
 }
 
